# Aspect-Based-Sentiment-Analysis

./: .gitignore  ABSA_original.ipynb  README.md  absa_main.py  predict_attention_bilstm.py  pyproject.toml  requirements.txt  setup_project.py  streamlit_app.py  train_attention_bilstm.py
.streamlit/: config.toml
config/: settings.py
data/: absa_samples.csv  generate_absa_dataset.py
future_enhancements/: README.md  implementation_roadmap.md  technical_prerequisites.md
guide/: attention_bilstm_model.md  quick_start.md  streamlit_setup_guide.md  troubleshooting.md
src/core/: absa_engine.py
src/models/: attention_bilstm.py  model_manager.py
src/neural/: __init__.py  dataset.py  inference.py  preprocessing.py  trainer.py
src/utils/: text_processing.py
tests/: test_attention_bilstm.py  test_cases.py
utils/: app_utils.py
